# onnxruntime-qnn

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  README.md  build_error.txt  debug_log.txt  log.txt  requirements.txt  setup.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: 03-mobile.yml  04-compute.yml  05-performance.yml  07-general.yml
.github/actions/pr-status-reporter/: action.yml
.github/workflows/: qualcomm-internal-build-and-test-single-os.yml  qualcomm-internal-build-and-test.yml  qualcomm-internal-build-wheels-nugets-zips.yml  qualcomm-internal-build-wheels.yml  qualcomm-internal-ci.yml  qualcomm-internal-merge-upstream.yml  qualcomm-internal-qdc-test.yml  qualcomm-internal-release-nightly.yml  qualcomm-internal-release.yml  qualcomm-internal-status-monitor.yml  qualcomm-internal-upload-artifactory-from-github.yml  qualcomm-internal-upload-artifactory-main.yml  qualcomm-internal-upload-artifactory.yml
cmake/: CMakeLists.txt  adjust_global_compile_flags.cmake  deps.txt  onnxruntime.cmake  onnxruntime_cli_tools.cmake  onnxruntime_common.cmake  onnxruntime_executable_tools.cmake  onnxruntime_mlas.cmake  onnxruntime_providers.cmake  onnxruntime_providers_qnn.cmake  onnxruntime_providers_qnn_abi.cmake  onnxruntime_providers_qnn_abi_simulation.cmake  onnxruntime_providers_qnn_simulation.cmake  onnxruntime_python.cmake  onnxruntime_qnn_ep_tool.cmake  onnxruntime_test_pch.cmake  onnxruntime_unittests.cmake  qnn_udo_unittest.cmake  test_pch.h
cmake/patches/: 0001-Add-Roialign-Op-to-HTP.patch  ort_api_version.patch  ort_test_binaries.patch
cmake/patches/ort_core/: 0001-cpp-model-test-runner-uses-plugin-EP.patch  0002-Add-Roialign-Op-to-HTP.patch  0003-Update-argument-for-monolithic-lstm.patch
csharp/: OnnxRuntime.CSharp.proj
csharp/src/Qualcomm.ML.OnnxRuntime.QNN/: QnnEpHelper.cs  Qualcomm.ML.OnnxRuntime.QNN.csproj
csharp/testdata/: abs_free_dimensions.onnx  matmul_1.onnx  model_181031_12.onnx  test_types_BFLOAT16.onnx  test_types_FLOAT16.onnx
docs/: release-notes.txt
docs/execution-providers/: QNN-ExecutionProvider.md
docs/execution_providers/: QNN-ExecutionProvider.md  build.md  development.md
docs/python/: README.rst
hooks_qcom/: README.md  pre-push
java/testdata/: cnn_mnist_pytorch.onnx  generic_sparse_to_dense_matmul.onnx  lr_mnist_scikit.onnx  partial-inputs-test-2.onnx  partial-inputs-test.onnx
js/web/test/: suite-test-list.jsonc
objectivec/test/testdata/: single_add.onnx
onnxruntime/cli_tools/: main.cpp  utils.cpp  utils.hpp
onnxruntime/core/framework/: allocator_utils.cc  node_unit.cc  session_options.h  utils.cc
onnxruntime/core/graph/: ep_api_types.cc  graph_viewer.cc  model.cc
onnxruntime/core/optimizer/: affine_elimination.cc  affine_elimination.h  cast_elimination.cc  constant_folding.cc  double_qdq_pairs_remover.cc  graph_transformer.cc  graph_transformer_utils.cc  layer_norm_fusion.cc  matmul_add_fusion.cc  mul_add_fusion.cc  mul_add_fusion.h  reshape_fusion.cc  rule_based_graph_transformer.cc  utils.cc
onnxruntime/core/providers/: provider_factory_creators.h
onnxruntime/core/session/: inference_session.cc  inference_session.h  onnxruntime_c_api.cc  provider_bridge_ort.cc  provider_registration.cc
onnxruntime/executable_tools/: main.cpp
onnxruntime/python/: __init__.py  onnxruntime_pybind_quant.cc  onnxruntime_pybind_state.cc
onnxruntime/python/datasets/: logreg_iris.onnx
onnxruntime/test/autoep/: test_selection.cc
onnxruntime/test/contrib_ops/: matmul_2bits_test.cc  matmul_4bits_test.cc
onnxruntime/test/dlc_output/: QNNExecutionProvider_QNNExecutionProvider_11142297670459488311_0_0.dlc
onnxruntime/test/ep_weight_sharing_ctx_gen/: command_args_parser.cc  command_args_parser.h  main.cc  test_configuration.h
onnxruntime/test/framework/: inference_session_test.cc
onnxruntime/test/onnx/: TestCase.cc  main.cc
onnxruntime/test/optimizer/: graph_transform_test.cc  graph_transform_test_builder.h  qdq_transformer_test.cc
onnxruntime/test/perftest/: command_args_parser.cc  ort_test_session.cc
onnxruntime/test/python/: onnxruntime_test_python_backend.py
onnxruntime/test/testdata/: LabelEncoder.onnx  VariedInputCustomOp.onnx  abs_free_dimensions.onnx  add_opset_314159.onnx  alloc_tensor_reuse.onnx  attention_mask1d_fp16.onnx  attention_mask1d_fp32.onnx  attention_mask2d_fp32.onnx  attention_no_mask_fp16.onnx  attention_past_state.onnx  attention_past_state.u8s8.onnx  attention_past_state.u8u8.onnx  bart_tiny.onnx  bert_toy_optimized.onnx  bert_toy_postprocessed.onnx  capi_symbolic_dims.onnx  ckpt_mnist.pt  constant_floats.onnx  conv_autopad.onnx  conv_qdq_s8s8.onnx  conv_qdq_s8s8_perchannel.onnx  conv_qdq_u8u8.onnx  coreml_argmax_cast_test.onnx  cpu_fallback_pattern_0.onnx  cpu_fallback_pattern_1.onnx  cpu_fallback_pattern_2.onnx  cpu_fallback_pattern_3.onnx  cpu_fallback_pattern_4.onnx  (+125 more)
qcom/: build_and_test.py  packages.yml  requirements-qdc.txt  requirements.txt
qcom/docs/: setup_linux_vm.sh  vm_setup.md
qcom/ep_build/: task.py  typing.py  util.py
qcom/gen_ai/: compile_to_onnx.py  convert_qdq_to_onnx.py  download_qdq_from_hub.py  env_setup.sh  env_setup_win.ps1  llama-requirements.txt  main.py  run_genie_model.py  upload_to_hub.py
qcom/model_test/: accuracy_metrics.py  metric_factory.py  model_test.py  smoke_test.py
qcom/samples/: test_qnnep.cs  test_wheel.py
qcom/submodule_bundles/: cmake_external_emsdk.bundle  cmake_external_libprotobuf-mutator.bundle  cmake_external_onnx.bundle  third_party_pybind11.bundle
samples/: test_wheel.py
samples/executable_tools/: README.md  main.cpp  model_info.cpp  model_info.hpp  utils.cpp  utils.hpp
samples/qnn_ep_tool/: README.md  main.cpp  model_info.cpp  model_info.hpp  utils.cpp  utils.hpp
temp_test/: matmulNbitsTest.py  model_nbits.onnx  model_nbits_qdq.onnx  nBits_qdq.onnx  qweight_repacked.data  qzeros_repacked.data  scales_repacked.data
tools/ci_build/: build.py  build_args.py  pkg_assets.py
tools/nuget/: generate_nuspec_for_native_nuget.py
tools/python/: remove_initializer_from_input.py
(+1192 files in other folders)
